--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,8 +18,6 @@ jobs:
     runs-on: ubuntu-22.04
     permissions:
       contents: write
-      pages: write
-      id-token: write
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}
 
@@ -51,6 +49,12 @@ jobs:
         run: npm run build
 
       - name: Upload artifact
+        run: |
+          echo "Checking if _site exists..."
+          ls -la _site || echo "_site folder not found!"
+        continue-on-error: true
+
+      - name: Upload to GitHub Pages
         uses: actions/upload-artifact@v4
         with:
           name: github-pages
