--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,5 +62,10 @@ jobs:
           name: github-pages
           path: ./_site
 
+      - name: Debug Check artifacts
+        run: ls -la ${{ runner.temp }}/_github_workflow || echo "Артефакты не найдены!"
+
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v2
+        with:
+          artifact_name: github-pages
